Changes in Edit Load Request

--- a/client/views/partials/admin/orderProcess/editOrderRequest.html
+++ b/client/views/partials/admin/orderProcess/editOrderRequest.html
@@ -8,7 +8,7 @@
             </ul>
         </div>
         <div class="tab-content">
-            <div id="truckOwner" class="tab-pane fade in active col-xs-12">
+            <div id="truckOwner" class="tab-pane fade in active col-xs-12" ng-init="truckOwnerOrderOnfo();">
                 <uib-accordion>
                     <div uib-accordion-group class="panel-default pos-relative" is-open="status.isOpen">
                         <uib-accordion-heading>
