few changes in events api

--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -52,7 +52,7 @@
                 {{device.createdAt | date:'yyyy-MM-dd'}}
             </td>
             <td data-title="'Installed By'" sortable="'installedBy'" class="clickable-item">
-                {{device.installedBy}}
+                {{device.installedBy.userName}}
             </td>
             <!--<td data-title="'Payment'" sortable="'received'" class="clickable-item">
                 {{device.received}}
