Dropdown Select Option Front End Issue In Cutomer Module

--- a/client/views/partials/admin/customers/editUpdateTruckOwner.html
+++ b/client/views/partials/admin/customers/editUpdateTruckOwner.html
@@ -14,6 +14,7 @@
                         </div>
                         <div class="form-group styling-input-list">
                             <select class="form-control custom-form-control" ng-model="truckOwner.leadType">
+                                <option ng-value="" selected>-- Select --</option>
                                 <option ng-repeat="type in leadType" ng-value="type.value">{{type.key}}</option>
                             </select>
                             <label class="focus-effect-for-input">Lead Type*</label>
@@ -155,7 +156,6 @@
                         </div>
                         <div class="form-group styling-input-list">
                             <select class="form-control custom-form-control" ng-model="truckOwner.yearInService">
-                                <option value="" selected>--Select Year--</option>
                                 <option ng-repeat="years in yearInService" ng-value="years">{{years}}</option>
                             </select>
                             <label class="focus-effect-for-input" >Year In Service</label>
